Fixed problem on IE8 with unhidden blocks

--- a/mod_news_pro_gk5/interface/css/style.css
+++ b/mod_news_pro_gk5/interface/css/style.css
@@ -260,7 +260,7 @@ img.nspImage.gkResponsive {
 /* Animation */
 .nspList,
 .nspArtPage { 
-	opacity: 0; 
+	opacity: 0; filter: alpha(opacity=0);
 	-webkit-transition: opacity 0.5s ease-out; 
 	   -moz-transition: opacity 0.5s ease-out; 
 	    -ms-transition: opacity 0.5s ease-out; 
@@ -269,7 +269,7 @@ img.nspImage.gkResponsive {
 }
 .nspList.active,
 .nspArtPage.active { 
-	opacity: 1; 
+	opacity: 1; filter: alpha(opacity=100);
 }
 
 /* Suffix neutral */
